[tool.poetry]
name = "liia-child-analysis"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
lxml = "^4.8.0"
more-itertools = "^8.12.0"
sfdata-stream-parser = "^0.3.0"
xmlschema = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
safety = "^1.10.3"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
